<resources>
    <string name="app_name">Wine Reviewer</string>
    <string name="review_activity">Your Review</string>
    <string name="cellar_activity">Cellar</string>
    <string name="popular_activity">Popular Review</string>

    <string name="title_reviews">Reviews</string>
    <string name="title_cellar">Cellar</string>
    <string name="title_guide">Guide</string>
    <string name="title_popular">Popular</string>

    <string name="main_activity_menu_preferences">preferences</string>
    <string name="main_activity_menu_about">about</string>
    <string name="main_activity_menu_login">login</string>

    <string name="review_fragment_welcome_1">Welcome to Wine Reviewer</string>
    <string name="review_fragment_welcome_2">Create a new review by pressing the red button.</string>
    <string name="review_fragment_welcome_3">Sort your reviews alphabetically or by rating with the button in the upper right corner.</string>

    <string name="cellar_fragment_welcome_1">Your Wine Cellar</string>
    <string name="cellar_fragment_welcome_2">Record what you have in your personal collection by pressing the red button.</string>
    <string name="cellar_fragment_welcome_3">Sort your wines alphabetically, by rating, or by number of bottles with the button in the upper right corner.</string>

    <!-- THESE STRINGS ARE FOR THE PUBLIC REPOSITORY VERSION ONLY -->
    <string name="popular_fragment_diabled_1">Disabled for public repository</string>
    <string name="popular_fragment_diabled_2">This fragment loads popular reviews from other users.</string>


    <string name="guide_title_red_varietals">Red Varietals</string>
    <string name="guide_title_red_appellations">Red Appellations</string>
    <string name="guide_title_white_varietals">White Varietals</string>
    <string name="guide_title_white_appellations">White Appellations</string>
    <string name="guide_title_bubbles">Bubbles</string>
    <string name="guide_title_fortified">Fortified</string>



    <!--RED WINE BUTTONS-->
    <string name="button_barbera">Barbera</string>
    <string name="button_cabernet_franc">Cabernet Franc</string>
    <string name="button_cabernet_sauvignon">Cabernet Sauvignon</string>
    <string name="button_carignan">Carignan</string>
    <string name="button_dolcetto">Dolcetto</string>
    <string name="button_gamay">Gamay</string>

    <string name="button_grenache">Grenache</string>
    <string name="button_malbec">Malbec</string>
    <string name="button_merlot">Merlot</string>
    <string name="button_mourvedre">Mourvedre</string>
    <string name="button_nebbiolo">Nebbiolo</string>
    <string name="button_petite_sirah">Petite Sirah</string>

    <string name="button_pinot_noir">Pinot Noir</string>
    <string name="button_pinotage">Pinotage</string>
    <string name="button_sangiovese">Sangiovese</string>
    <string name="button_syrah">Syrah</string>
    <string name="button_tempranillo">Tempranillo</string>
    <string name="button_zinfandel">Zinfandel</string>



    <string name="guide_detail_label_origin">Origin:</string>
    <string name="guide_detail_label_grapes">Grapes:</string>
    <string name="guide_detail_label_flavor">Flavor Profile:</string>
    <string name="guide_detail_label_pairing">Pairing Suggestions:</string>

    <string name="user_shared_preferences">com.victuallist.winereviewer</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="rate_cellar_item_button">rate it</string>
    <string name="add_review_to_cellar_button">add to cellar</string>

    <string name="label_name">Name:</string>
    <string name="label_vineyard">Vineyard:</string>
    <string name="label_varietal">Varietal:</string>
    <string name="label_vintage">Vintage:</string>
    <string name="label_origin">Origin:</string>
    <string name="label_rating">Rating:</string>
    <string name="label_price">Price:</string>
    <string name="label_pairing">Pairing:</string>
    <string name="label_taste">Taste:</string>
    <string name="label_smell">Smell:</string>
    <string name="label_color">Color:</string>
    <string name="label_bottles">Bottles:</string>
    <string name="label_size">Size:</string>
    <string name="label_buy_date">Buy date:</string>
    <string name="label_location">Location:</string>
    <string name="label_drink_by">Drink by:</string>
    <string name="label_value">Value:</string>
    <string name="label_notes">Notes:</string>

    <string-array name="vineyards">
        <item>Ravenswood</item>
        <item>Coppola</item>
        <item>V.Sattui Winery</item>
        <item>Darioush Winery</item>
        <item>Chateau Montelena</item>
        <item>Inglenook Winery</item>
        <item>Domaine Carneros</item>
        <item>Luna Vineyards</item>
        <item>Opus One</item>
        <item>Spottswoode Winery</item>
        <item>Stag\'s Leap Wine Cellars</item>
        <item>Castello di Amorosa</item>
    </string-array>


    <string-array name="origins">
        <item>Italy</item>
        <item>France</item>
        <item>Spain</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Chile</item>
        <item>South Africa</item>
        <item>Germany</item>
        <item>Portugal</item>
        <item>Greece</item>
        <item>New Zealand</item>
        <item>California, USA</item>
    </string-array>

    <string-array name="varietals">
        <item>Barbera</item>
        <item>Cabernet Franc</item>
        <item>Cabernet Sauvignon</item>
        <item>Carignan</item>
        <item>Dolcetto</item>
        <item>Gamay</item>
        <item>Grenache</item>
        <item>Malbec</item>
        <item>Merlot</item>
        <item>Mourvedre</item>
        <item>Nebbiolo</item>
        <item>Nero d\'Avola</item>
        <item>Petite Sirah</item>
        <item>Pinot Noir</item>
        <item>Pinotage</item>
        <item>Sangiovese</item>
        <item>Syrah</item>
        <item>Tempranillo</item>
        <item>Zinfandel</item>


        <item>Bordeaux</item>
        <item>Chianti</item>
        <item>Cotes du Rhone</item>
        <item>Ribera del Duero</item>
        <item>Rioja</item>
        <item>Valpolicella</item>


        <item>Chardonnay</item>
        <item>Chenin Blanc</item>
        <item>GewurztRaminer</item>
        <item>Gruner Veltline</item>
        <item>Marsanne</item>
        <item>Muscat</item>
        <item>Pinot Blanc</item>
        <item>Pinot Grigio</item>
        <item>Riesling</item>
        <item>Roussanne</item>
        <item>Sauvignon Blanc</item>
        <item>Semillion</item>
        <item>Tocai Friulano</item>
        <item>Trebbiano</item>
        <item>Viognier</item>


        <item>Chablis</item>
        <item>Rioja (white)</item>
        <item>Sancerre</item>


        <item>Asti</item>
        <item>Cava</item>
        <item>Champagne</item>
        <item>Prosecco</item>


        <item>Madeira</item>
        <item>Marsala</item>
        <item>Port</item>
        <item>Sherry</item>
        <item>Vermouth</item>
    </string-array>

</resources>
