<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:background="@color/fragment_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/basic_card_elevation"
        android:layout_marginLeft="@dimen/margin_md"
        android:layout_marginRight="@dimen/margin_md">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_sm">

            <!--NAME ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_name"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompleteName"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--VINEYARD ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelVineyard"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_vineyard"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompleteVineyard"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--VARIETAL ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelVarietal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_varietal"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompleteVarietal"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--VINTAGE ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelVintage"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_vintage"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompleteVintage"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--ORIGIN ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelOrigin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_origin"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompleteOrigin"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--RATING ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelRating"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_rating"/>

                <RatingBar
                    android:id="@+id/reviewActivityRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:numStars="5"
                    android:stepSize="0.5" />



            </LinearLayout>

            <!--PRICE ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelPrice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_price"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompletePrice"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--PAIRING ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelPairing"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_pairing"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompletePairing"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--TASTE ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelTaste"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_taste"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompleteTaste"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--SMELL ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelSmell"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_smell"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompleteSmell"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

            <!--COLOR ROW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewActivityLabelColor"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/review_card_text_secondary"
                    android:text="@string/label_color"/>

                <AutoCompleteTextView
                    android:id="@+id/reviewActivityAutoCompleteColor"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/review_card_text_secondary"/>

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    </ScrollView>


</android.support.constraint.ConstraintLayout>