<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reviewsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/newReviewFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_md"
        android:layout_marginEnd="@dimen/margin_md"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/simple_add"
        android:tint="@color/white"
        android:scaleType="center"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <android.support.v7.widget.CardView
        android:id="@+id/reviewWelcomCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_lg"
        android:visibility="visible"
        app:cardElevation="@dimen/intro_card_elevation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_md"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/review_card_text_primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/review_fragment_welcome_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:layout_marginLeft="@dimen/margin_sm"
                android:layout_marginRight="@dimen/margin_sm"
                android:textSize="@dimen/review_card_text_secondary"
                android:textColor="@color/black"
                android:text="@string/review_fragment_welcome_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:layout_marginLeft="@dimen/margin_sm"
                android:layout_marginRight="@dimen/margin_sm"
                android:textSize="@dimen/review_card_text_secondary"
                android:textColor="@color/black"
                android:text="@string/review_fragment_welcome_3" />


        </LinearLayout>



    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>